[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpti"
dynamic = ["version"]
description = "Python dpti for thermodynamics integration"
authors = [{ name = "Deep Modeling Team" }]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
readme = "README.md"
requires-python = ">3.6"
keywords = ["free energy", "thermodynamics integration", "deepmd-kit"]
dependencies = [
    "apache-airflow >= 2.0",
    "scipy",
    "numpy",
    "pymbar",
    "dargs",
    "dpdispatcher >= 0.3",
    "sqlalchemy >=1.4.28,<2.0",
]

[project.urls]
homepage = "https://github.com/deepmodeling/dpti"

[project.optional-dependencies]
# docs = ["sphinx", "recommonmark", "sphinx_rtd_theme"]

[project.scripts]
dpti = "dpti.main:main"

[tool.setuptools.packages.find]
include = ["dpti*"]

[tool.setuptools_scm]
write_to = "dpti/_version.py"
