[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpti"
dynamic = ["version"]
description = "Python dpti for thermodynamics integration"
authors = [{ name = "Deep Modeling Team" }]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
readme = "README.md"
requires-python = ">3.6"
keywords = ["free energy", "thermodynamics integration", "deepmd-kit"]
dependencies = [
    "apache-airflow >= 2.0",
    "scipy",
    "numpy",
    "pymbar",
    "dargs",
    "dpdispatcher >= 0.3",
    "sqlalchemy >=1.4.28,<2.0",
]

[project.urls]
homepage = "https://github.com/deepmodeling/dpti"

[project.scripts]
dpti = "dpti.main:main"

[project.optional-dependencies]
docs = [ 
    'sphinx',
    'myst-parser',
    'sphinx_rtd_theme>=1.0.0rc1',
    'numpydoc',
    'deepmodeling_sphinx>=0.1.1',
    'dargs>=0.3.1',
    'sphinx-argparse',
]

[tool.setuptools.packages.find]
include = ["dpti*"]

[tool.setuptools_scm]
write_to = "dpti/_version.py"

[tool.ruff]
select = [
    "E", # errors
    "F", # pyflakes
    "D", # pydocstyle
	"I", # isort
    "UP", # pyupgrade
    "C4", # flake8-comprehensions
    "RUF", # ruff
    "NPY", # numpy
]

ignore = [
    "E501", # line too long
    "F841", # local variable is assigned to but never used
    "E741", # ambiguous variable name
    "E402", # module level import not at top of file
    "D100", # TODO: missing docstring in public module
    "D101", # TODO: missing docstring in public class
    "D102", # TODO: missing docstring in public method
    "D103", # TODO: missing docstring in public function
    "D104", # TODO: missing docstring in public package
    "D105", # TODO: missing docstring in magic method
    "D205", # 1 blank line required between summary line and description
    "D401", # TODO: first line should be in imperative mood
    "D404", # TODO: first word of the docstring should not be This
]
ignore-init-module-imports = true

[tool.ruff.pydocstyle]
convention = "numpy"
